...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome" />

    <Button
        android:id="@+id/btn_addYourData"
        android:onClick="addYourData"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Admin Control Panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Button
        android:id="@+id/btn_viewYourData"
        android:onClick="viewYourData"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="View Job Listings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
