...
    <string name="ic_default_user_image">Default User Image</string>
    <string name="ic_star1">First Star</string>
    <string name="ic_star2">Second Star</string>
    <string name="ic_star3">Third Star</string>
    <string name="ic_star4">Fourth Star</string>
    <string name="ic_star5">Fifth Star</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="search_workers">Search Workers</string>
    <string name="this_is_the_scroll_area">This is the Scroll Area</string>
    <string name="enter_query">Enter Query</string>
    <string name="lawn_care">Lawn-Care</string>
    <string name="defaulttext">DefaultText</string>
    <string name="address">Address:</string>
    <string name="property_size">Property Size:</string>
...
