<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_jobText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_workers"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/SP_WorkerFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_txt_layout"
            android:padding="10dp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TI_searchWorkerQuery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:visibility="visible"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_searchWorkerQuery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_txt_layout"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:hint="@string/enter_query"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/BLACK" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BTN_submitSearchWorkerQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:padding="10dp"
            android:text="@string/Submit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_SearchFilterWorkers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/SW_SearchFilterWorkers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:showText="false"
                android:splitTrack="false"
                android:textOff="@string/search"
                android:textOn="@string/filter"
                tools:checked="false" />
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LL_searchWorkersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>
</LinearLayout>